Running rest tests concurrently to reduce build time